tests/files/flow_controller_tests/should_run/077.cmdr
x = 3;
print cot(x);