tests/files/flow_controller_tests/should_fail/056.cmdr
x = "cat";
print cot(x);